...
                        android:id="@+id/secondCard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp">

                        <ImageView
                            android:id="@+id/previousArrow"
                            style="@style/Widget.AppCompat.ActionButton"
                            android:layout_width="@dimen/stopDetailArrowSize"
                            android:layout_height="@dimen/stopDetailArrowSize"
                            android:layout_margin="15dp"
                            android:contentDescription="@string/previous"
                            android:onClick="@{() -> viewModel.getPreviousStopForXMLBinding()}"
...
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/sepLine4"
                            app:layout_constraintBottom_toBottomOf="parent" />

                        <Button
                            android:id="@+id/arrived"
                            style="@style/MaineStyledButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_marginTop="20dp"
                            android:gravity="center"
...
                            android:visibility="@{safeUnbox(viewModel.stopActionsAllowed &amp;&amp; viewModel.displayArrived) ? View.VISIBLE : View.GONE}"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/sepLine4"
                            tools:ignore="SpeakableTextPresentCheck" />

                        <Button
                            android:id="@+id/departed"
                            style="@style/MaineStyledButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_marginTop="20dp"
                            android:background="@{safeUnbox(viewModel.enableDepart) ? @color/colorAccent : @color/gray}"
...
                            android:orientation="horizontal"
                            android:visibility="@{safeUnbox(viewModel.stopActionsAllowed &amp;&amp; viewModel.currentStop.isArrivalAvailable()) ? View.VISIBLE : View.GONE}"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/sepLine2">

                            <TextView
                                android:id="@+id/etaOrArrivedTimeLabel"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight=".5"
                                android:gravity="start"
                                android:text='@{!viewModel.currentStop.CompletedTime.isEmpty ? @string/stop_arrived_on : @string/estimated_time}'
                                android:textColor="@color/color_white"
...
                            android:orientation="horizontal"
                            app:layout_constraintStart_toStartOf="parent"
                            android:visibility="@{viewModel.currentStop.departedTime.isEmpty ? View.GONE : View.VISIBLE}"
                            app:layout_constraintTop_toBottomOf="@id/sepLine5">

                            <TextView
                                android:id="@+id/depatureLabel"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight=".5"
                                android:gravity="start"
                                android:text="@string/stop_departed_on"
                                android:textColor="@color/color_white"
...
