<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/recyclerLayoutStartPadding"
    android:alpha="1"
    tools:context=".ui.fragments.ListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/distanceDetailHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="@dimen/stopListRowPadding"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/totalMiles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/miles"
            android:textColor="@color/stopsEtaTextColor"
            android:textSize="@dimen/distanceTextSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="450 Miles" />

        <TextView
            android:id="@+id/firstDot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:text="@string/dot"
            android:textColor="@color/stopsEtaTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/totalMiles"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/totalStops"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/stops"
            android:textColor="@color/stopsEtaTextColor"
            android:textSize="@dimen/distanceTextSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/firstDot"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.531"
            tools:text="9 Stops" />

        <TextView
            android:id="@+id/secondDot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:text="@string/dot"
            android:textColor="@color/stopsEtaTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/totalStops"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/totalHours"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/driveTime"
            android:textColor="@color/stopsEtaTextColor"
            android:textSize="@dimen/distanceTextSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/secondDot"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="8.75 hr Estimated Drive Time" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/vDivider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/recyclerSeparatorHeight"
        android:layout_below="@+id/distanceDetailHolder"
        android:background="@color/separatorColor"
        android:visibility="gone"
        tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tripInfoRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vDivider"
        android:background="@color/colorPrimary"
        android:clipToPadding="false"
        android:paddingLeft="@dimen/stopListPadding"
        android:paddingTop="@dimen/stopListPadding"
        android:paddingRight="@dimen/stopListPadding"
        android:paddingBottom="@dimen/stopListPadding"
        tools:itemCount="4"
        tools:listitem="@layout/item_row" />

    <com.trimble.ttm.formlibrary.customViews.ProgressErrorView
        android:id="@+id/progressErrorView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</RelativeLayout>

