...
                android:textColor="@color/spinnerTextColor"
                android:textSize="@dimen/stop_list_completion_time_text_size"
                android:visibility="gone"
                tools:text="Address Line 1\nNeosho, MO 64850" />

            <TextView
                android:id="@+id/stopArrivedOn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/stop_arrived_on"
                android:textColor="@color/stopCompletion_Display_Color"
                android:textSize="@dimen/stop_list_completion_time_label_size"
...
                android:textColor="@color/white"
                android:textSize="@dimen/stop_list_completion_time_text_size"
                android:visibility="gone"
                tools:text="Arrived Time" />

            <TextView
                android:id="@+id/stopDepartedOn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stop_departed_on"
                android:textColor="@color/stopCompletion_Display_Color"
                android:textSize="@dimen/stop_list_completion_time_label_size"
                android:visibility="gone"
...
